# shell-rs

./: Cargo.toml  README.md  notes.md  run_shell.sh
src/: autocompletion.rs  builtins.rs  command.rs  main.rs  output.rs  parser.rs  redirection.rs  shell.rs  utils.rs
