[package]
name = "shell-rs"
version = "0.1.0"
authors = ["ksmit323"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
rustyline = "15.0.0"
thiserror = "1.0.38"                             # error handling
